# Qt_TS_Translator

./: .gitignore  CLAUDE.md  README.md  constants.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
translations/finished/: t1_ch.ts  t1_de.ts  t1_es.ts  t1_fr.ts  t1_hi.ts  t1_it.ts  t1_ja.ts  t1_ko.ts  t1_tr.ts
translations/unfinished/: t1_ch.ts  t1_de.ts  t1_es.ts  t1_fr.ts  t1_hi.ts  t1_it.ts  t1_ja.ts  t1_ko.ts  t1_tr.ts
